tdf#147466 sw_redlinehide: avoid crashing by delete un-deleting

After the first delete, there is a single redline from 170,0 to 177,9,
which contains a section.

[ 169]  0x6133358            TextNode "b) 9 (Robin Cook, Jack Straw, Margaret Beckett, David Milliband, William Hague, Philip Hammond, Boris Johnson, Jeremy Hunt, Dominic Raab)",
[ 170]  0x61349d8            TextNode "Hangul script is used to write which language?",
[ 171]  0x61396f0         SectionNode ,
[ 172]   0x6138cc8           TextNode "Japanese",
[ 173]   0x613ab58           TextNode "Vietnamese",
[ 174]   0x613ad78           TextNode "Korean",
[ 175]   0x613bc28           TextNode "Chinese",
[ 176]  0x24a61c0             EndNode ,
[ 177]  0x6139568            TextNode "c) Korean",

Then the next delete is from 169,137 to 170,0 and it is combined in
AppendRedline() with the existing one, removing the existing one.

Now the code for tdf#119571 at the end of AppendRedline() that splits up
the one redline into 4 redlines, with the section start node and section
end node not covered by any of them.

AppendRedline() of a delete redline causing previously deleted nodes to
become un-deleted is a situation that UpdateFramesForAddDeleteRedline()
doesn't expect.

Additionally there seems to be an issue with CheckParaRedlineMerge()
setting the Section's m_bHiddenFlag, which was unintentional, it should
only set m_eMerge flag, but fixing that isn't sufficient.

Reportedly this crashes since commit
6433dc223f6d21570e7132c4a580d186a5d5a334 but the problem appears older.

Change-Id: Ic83a93d5aaec4ee562fb960693b52bd7b25cb1a3